Fixed overlapping fonts at different screen widths

--- a/css/custom.css
+++ b/css/custom.css
@@ -74,36 +74,42 @@ img {
 }
 @media (min-width:200px)
 {
-	.ja-navbutton { font-size: 80%; border-right: 0px; }
+	.ja-navbutton { font-size: 40%; border-right: 0px; }
+	.ja-content { font-size: 100%; border-right: 1px solid #a0a0a0; }
 	h1 { font-size: 120%; }
 }
 @media (min-width:700px)
 {
-	.ja-navbutton, .ja-content { font-size: 100%; border-right: 1px solid #a0a0a0; }
+	.ja-navbutton { font-size: 50%; border-right: 1px solid #a0a0a0; }
+	.ja-content { font-size: 110%; border-right: 1px solid #a0a0a0; }
 	h1 { font-size: 140%; }
 }
 
 @media (min-width:800px)
 {
-	.ja-navbutton, .ja-content { font-size: 120%; border-right: 1px solid #a0a0a0; }
+	.ja-navbutton { font-size: 60%; border-right: 1px solid #a0a0a0; }
+	.ja-content { font-size: 120%; border-right: 1px solid #a0a0a0; }
 	h1 { font-size: 160%; }
 }
 
 @media (min-width:900px)
 {
-	.ja-navbutton, .ja-content { font-size: 140%; border-right: 1px solid #a0a0a0; }
+	.ja-navbutton { font-size: 80%; border-right: 1px solid #a0a0a0; }
+	.ja-content { font-size: 140%; border-right: 1px solid #a0a0a0; }
 	h1 { font-size: 160%; }
 }
 
 @media (min-width:1000px)
 {
-	.ja-navbutton, .ja-content { font-size: 160%; border-right: 1px solid #a0a0a0; }
+	.ja-navbutton { font-size: 100%; border-right: 1px solid #a0a0a0; }
+	.ja-content { font-size: 160%; border-right: 1px solid #a0a0a0; }
 	h1 { font-size: 180%; }
 }
 
 @media (min-width:1100px)
 {
-	.ja-navbutton, .ja-content { font-size: 180%; border-right: 1px solid #a0a0a0; }
+	.ja-navbutton { font-size: 120%; border-right: 1px solid #a0a0a0; }
+	.ja-content { font-size: 180%; border-right: 1px solid #a0a0a0; }
 	h1 { font-size: 180%; }
 }
 #ja-footer {
